# File-Broadcaster

./: .gitignore  .gitmodules  CMakeLists.txt  FileBroadcaster.sln  Makefile  README.md
.circleci/: config.yml
.github/workflows/: release.yml  tests.yml
src/: Config.cpp  Config.hpp  FileBroadcaster.vcxproj  FileBroadcaster.vcxproj.filters  Main.cpp  Receiver.cpp  Sender.cpp  Utils.hpp
tests/: Tests.cpp  e2e.sh  e2e_lossy.sh  lossy_proxy.py  tests.vcxproj
